Remove comment and unnecessary elements
Don't need as many different classes per assignment

--- a/odin-links-and-images/pages/style.css
+++ b/odin-links-and-images/pages/style.css
@@ -5,3 +5,20 @@ div {
   font-weight: bold;
   text-align: center;
 }
+
+.odd {
+  color: #000000;
+  background-color: #ff000080;
+}
+
+#two {
+
+}
+
+.three {
+
+}
+
+#four {
+
+}
