Add and clean clicker elements
Add two buttons and ensure:
  - Left button is black bg with white text
  - Right button is yellow bg with black text
  - Both buttons share font settings

Assign a div to block previous inline style.

--- a/odin-links-and-images/pages/style.css
+++ b/odin-links-and-images/pages/style.css
@@ -5,7 +5,10 @@ div {
   font-weight: bold;
   text-align: center;
 }
-
+div.nobg{
+  color:#000000;
+  background-color: #FFFFFF;
+}
 .odd {
   color: #000000;
   background-color: #ff000080;
@@ -33,4 +36,21 @@ div {
   font-weight: 900;
   font-family: "Comic Sans";
   text-align: left;
+}
+
+.clicker {
+  font-size: 28px;
+  font-family: Helvetica, "Times New Roman", sans-serif;
+}
+
+.black_button {
+  color: #FFFFFF;
+  background-color: #000000;
+}
+
+.yellow_button {
+  color: #000000;
+  background-color:#FFFF00;
+  
+
 }
