--- a/odin-links-and-images/pages/descendantcombinators.css
+++ b/odin-links-and-images/pages/descendantcombinators.css
@@ -1,8 +1,6 @@
-.container{
+.container .text{
   text-align: center;
   color: #FF0000;
   background-color: #FFFF00;
   font-size: 20px;
 }
-
-.text{}
