--- a/odin-links-and-images/pages/cascadefix.css
+++ b/odin-links-and-images/pages/cascadefix.css
@@ -2,12 +2,6 @@ body{
   font-family:Arial, Helvetica, sans-serif
 }
 
-.para,
-.small-para {
-  color: hsl(0, 0%, 0%);
-  font-weight: 800;
-}
-
 .small-para {
   font-size: 14px;
   font-weight: 800;
@@ -15,6 +9,11 @@ body{
 
 .para {
   font-size: 22px;
+}
+
+.para .small-para {
+  color: hsl(0, 0%, 0%);
+  font-weight: 800;
 }
 
 .confirm {
@@ -35,7 +34,7 @@ body{
   font-size: 14px;
 }
 
-div.text {
+div .text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
