--- a/odin-links-and-images/pages/cascadefix.css
+++ b/odin-links-and-images/pages/cascadefix.css
@@ -4,7 +4,6 @@ body{
 
 .para {
   font-size: 22px;
-  font-weight: 800;
 }
 
 .small-para {
@@ -12,7 +11,8 @@ body{
   font-weight: 800;
 }
 
-.para .small-para {
+.para, 
+.small-para {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
 }
