--- a/odin-links-and-images/pages/cascadefix.css
+++ b/odin-links-and-images/pages/cascadefix.css
@@ -1,6 +1,5 @@
 body{
-  font-family:Arial, Helvetica, sans-serif;
-  font-weight: 300;
+  font-family:Arial, Helvetica, sans-serif
 }
 
 .para {
@@ -12,8 +11,7 @@ body{
   font-weight: 800;
 }
 
-.para, 
-.small-para {
+.para, .small-para {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
 }
