Apply style to image

--- a/odin-links-and-images/pages/style.css
+++ b/odin-links-and-images/pages/style.css
@@ -55,6 +55,15 @@ div.nobg{
 .yellow_button {
   color: #000000;
   background-color:#FFFF00;
-  
+}
 
+h1 {
+  text-align: center;
+}
+
+.center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 10%
 }
