--- a/odin-links-and-images/stylesheets/styles.css
+++ b/odin-links-and-images/stylesheets/styles.css
@@ -18,6 +18,7 @@ h3 {
 
 body {
   display: flex;
+  font-family: "Open Sans";
   flex-direction: column;
   align-items: center;
   background-color: powderblue;
