--- a/odin-links-and-images/stylesheets/styles.css
+++ b/odin-links-and-images/stylesheets/styles.css
@@ -6,6 +6,9 @@
 
 h1 {
   text-align: center;
+  color: sienna;
+  text-shadow: 1px 5px 4px #477c7d;
+  /* 0 0 0.01em blue, 0 0 0.08em blue; */
 }
 
 h2 {
@@ -19,6 +22,7 @@ h3 {
 body {
   display: flex;
   font-family: "Open Sans";
+  text-shadow: ;
   flex-direction: column;
   align-items: center;
   background-color: powderblue;
@@ -36,8 +40,8 @@ header > img {
   border: 10px solid cornflowerblue;
   border-bottom-left-radius: 20px;
   border-top-right-radius: 20px;
-  box-shadow: 5px 8px darkgrey;
-  outline: 1px solid wheat;
+  box-shadow: 10px 10px 18px sienna;
+  outline: 3px solid #460f47;
 }
 
 ul {
